Fixes #12723 !strict. Added workaround for android screen flicker problem.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@24485 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/transitions/slide.css
+++ b/mobile/themes/common/transitions/slide.css
@@ -1,4 +1,5 @@
 .slide.out {
+	-webkit-transform: translateX(-100%); /* to avoid screen flicker */
 	-webkit-animation-duration: .4s;
 	-webkit-animation-name: slideOut;
 	-webkit-animation-timing-function: linear;
